--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="contact.html">Contact</a>
 </nav>
 
-
+    <div class="slider">
     <div class="slides">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="retgr5y.jpg" class="lazyload" width="350px" alt="Photography sample 1">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="0cb40fdcf8e6de7a4cf546374a788c93.jpg" class="lazyload" width="350px" alt="Photography sample 2">
