--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <img src="https://via.placeholder.com/20x20?text=..." data-src="rryr5y5y.jpg" class="lazyload" width="350px" alt="Photography sample 8">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="rtefgtg.jpg" class="lazyload" width="350px" alt="Photography sample 9">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="sdcsdcdsc.jpg" class="lazyload" width="350px" alt="Photography sample 10">
+     <div class="dots"></div>
     </div>
     <button class="prev" onclick="prevSlide()">&#10094;</button>
     <button class="next" onclick="nextSlide()">&#10095;</button>
