--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
             <div class="card">
                 <img src="https://drive.google.com/file/d/1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg/view?usp=sharing" alt="Photography sample 3">
                 <img src="https://drive.google.com/file/d/1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg/view?usp=sharing" alt="Photography sample 3">
-                <img src="" alt="Photography sample 3">
+                <img src="https://drive.google.com/file/d/1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg/view?usp=sharing" alt="Photography sample 3">
                 <h3><p>outdoor shoots</p></h3>
             </div>
             <div class="card">
