--- a/gallery.html
+++ b/gallery.html
@@ -36,9 +36,9 @@
                 <h3><p>Official shoot </p></h3>
             </div>
             <div class="card">
-                <img src="https://drive.google.com/file/d/1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg/view?usp=sharing" alt="Photography sample 3">
-                <img src="https://drive.google.com/file/d/1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg/view?usp=sharing" alt="Photography sample 3">
-                <img src="https://drive.google.com/file/d/1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg/view?usp=sharing" alt="Photography sample 3">
+                <img src="https://drive.google.com/uc?export=view&id=1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg" alt="Outdoor shoot 1">
+        <img src="https://drive.google.com/uc?export=view&id=ANOTHER_ID" alt="Outdoor shoot 2">
+        <img src="https://drive.google.com/uc?export=view&id=ANOTHER_ID_2" alt="Outdoor shoot 3">
                 <h3><p>outdoor shoots</p></h3>
             </div>
             <div class="card">
