--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,8 @@
                <h3><p>Family portrait session capturing the essence of togetherness.</p></h3>
             </div>
             <div class="card">
-                <img src="" alt="Photography sample 2">
+                <img src="<img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Gallery image" width="300">
+" alt="Photography sample 2">
                 <h3><p>Official shoot </p></h3>
             </div>
             <div class="card">
