--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,8 @@
         <h2>Our Work</h2>
         <div class="gallery-grid">
             <div class="card">
-                <img src="" width="280px"="Photography sample 1">
+                <img src="<img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Gallery image" width="300">
+" width="280px"="Photography sample 1">
                <h3><p>Family portrait session capturing the essence of togetherness.</p></h3>
             </div>
             <div class="card">
