--- a/gallery.html
+++ b/gallery.html
@@ -28,13 +28,13 @@
         <h2>Our Work</h2>
         <div class="gallery-grid">
             <div class="card">
-                <img src="<img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Gallery image" width="300">
-" width="280px"="Photography sample 1">
+                <img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Photography sample 1" width="280px">
+
                <h3><p>Family portrait session capturing the essence of togetherness.</p></h3>
             </div>
             <div class="card">
-                <img src="<img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Gallery image" width="300">
-" alt="Photography sample 2">
+                <img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Photography sample 1" width="280px">
+
                 <h3><p>Official shoot </p></h3>
             </div>
             <div class="card">
