--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,7 @@
             </div>
             <div class="card">
                 <img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Photography sample 1" width="280px">
+                <img src="https://i.imgur.com/2yaf2wb.jpg" alt="Sample" width="300">
 
                 <h3><p>Official shoot </p></h3>
             </div>
