--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
             </div>
             <div class="card">
                 <img src="https://drive.google.com/uc?export=view&id=1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg" alt="Outdoor shoot 1">
-        <img src="https://drive.google.com/uc?export=view&id=ANOTHER_ID" alt="Outdoor shoot 2">
+        <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879220/rryr5y5y_sinqni.jpg" alt="Outdoor shoot 2">
         <img src="https://drive.google.com/uc?export=view&id=ANOTHER_ID_2" alt="Outdoor shoot 3">
                 <h3><p>outdoor shoots</p></h3>
             </div>
