--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
         <h2>Our Work</h2>
         <div class="gallery-grid">
             <div class="card">
-                <img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Photography sample 1" width="280px">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879220/rryr5y5y_sinqni.jpg" alt="Photography sample 1" width="280px">
 
                <h3><p>Family portrait session capturing the essence of togetherness.</p></h3>
             </div>
