--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ setInterval(nextSlide, 3000);
 
     <div class="card">
         <h2>Gallery</h2>
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="retgr5y.jpg" class="lazyload" width="350px" alt="Photography sample">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879220/rryr5y5y_sinqni.jpg" class="lazyload" width="350px" alt="Photography sample">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="yujuyi.jpg" class="lazyload" alt="Sample 2">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="wsqew.jpg" class="lazyload" alt="Sample 3">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="weqrwer.jpg" class="lazyload" alt="Sample 4">
