--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
     <div class="slider">
     <div class="slides">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="retgr5y.jpg" class="lazyload" width="350px" alt="Photography sample 1">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="0cb40fdcf8e6de7a4cf546374a788c93.jpg" class="lazyload" width="350px" alt="Photography sample 2">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="8dedcec0b90aede0e6dfe58f4ee223a8.jpg" class="lazyload" width="350px" alt="Photography sample 3">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="9911e1d1f857d908e7415027170c8f82.jpg" class="lazyload" width="350px" alt="Photography sample 4">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="1735715082319.jpg" class="lazyload" width="350px" alt="Photography sample 5">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="2dewd.jpg" class="lazyload" width="350px" alt="Photography sample 6">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="DSC_0593.jpg" class="lazyload" width="350px" alt="Photography sample 7">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="rryr5y5y.jpg" class="lazyload" width="350px" alt="Photography sample 8">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="rtefgtg.jpg" class="lazyload" width="350px" alt="Photography sample 9">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879226/retgr5y_bgc1if.jpg" class="lazyload" width="350px" alt="Photography sample 1">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878298/IMG-20250208-WA0024_whl8hq.jpg" class="lazyload" width="350px" alt="Photography sample 2">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878368/edsdfr_ybkjtf.jpg" class="lazyload" width="350px" alt="Photography sample 3">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879234/wfcdd_kaqh72.jpg" class="lazyload" width="350px" alt="Photography sample 4">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879217/rtefgtg_ccbx5b.jpg" class="lazyload" width="350px" alt="Photography sample 5">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879214/1735715082319_vqjah3.jpg" width="350px" alt="Photography sample 6">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879148/DSC_0027-2_o1vaol.jpg" class="lazyload" width="350px" alt="Photography sample 7">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878429/fdsvgfrbv_uhcgn2.jpg" class="lazyload" width="350px" alt="Photography sample 8">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878234/DSC_0593_zw6fms.jpg" alt="Photography sample 9">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="sdcsdcdsc.jpg" class="lazyload" width="350px" alt="Photography sample 10">
      <div class="dots"></div>
     </div>
@@ -93,13 +93,13 @@ setInterval(nextSlide, 3000);
     <div class="card">
         <h2>Gallery</h2>
         <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879220/rryr5y5y_sinqni.jpg" class="lazyload" width="350px" alt="Photography sample">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="yujuyi.jpg" class="lazyload" alt="Sample 2">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="wsqew.jpg" class="lazyload" alt="Sample 3">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="weqrwer.jpg" class="lazyload" alt="Sample 4">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="sfdsrfr.jpg" class="lazyload" alt="Sample 5">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="sdcsdcdsc.jpg" class="lazyload" alt="Sample 6">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="hhgghg.jpg" class="lazyload" alt="Sample 7">
-        <img src="https://via.placeholder.com/20x20?text=..." data-src="fgtretgtr.jpg" class="lazyload" alt="Sample 8">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879262/yujuyi_maffqh.jpg" class="lazyload" alt="Sample 2">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879219/wsqew_plfkzz.jpg" class="lazyload" alt="Sample 3">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879226/retgr5y_bgc1if.jpg" class="lazyload" alt="Sample 4">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879213/sfdsrfr_pv6rpn.jpg" class="lazyload" alt="Sample 5">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879194/sdcsdcdsc-copy-0_yelyno.jpg" class="lazyload" alt="Sample 6">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879244/hhgghg_uunynq.jpg" class="lazyload" alt="Sample 7">
+        <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878480/fgdhf_v5puiv.jpg" class="lazyload" alt="Sample 8">
     </div>
 
     <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@kartsstudio" data-unique-id="kartsstudio" data-embed-type="creator" style="max-width: 780px; min-width: 288px;">
