--- a/gallery.html
+++ b/gallery.html
@@ -28,33 +28,39 @@
         <h2>Our Work</h2>
         <div class="gallery-grid">
             <div class="card">
-                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879220/rryr5y5y_sinqni.jpg" alt="Photography sample 1" width="280px">
+                <img src="" alt="Photography sample 1" width="280px">
+                 <img src="" alt="Photography sample 1" width="280px">
 
                <h3><p>Family portrait session capturing the essence of togetherness.</p></h3>
             </div>
             <div class="card">
-                <img src="https://drive.google.com/uc?export=view&id=1CsboUp1iHdVH0xO9HlU2UdsFLwFJkWLo" alt="Photography sample 1" width="280px">
-                <img src="https://i.imgur.com/2yaf2wb.jpg" alt="Sample" width="300">
+                 <img src="" alt="Photography sample 1" width="280px">
+                 <img src="" alt="Photography sample 1" width="280px">
+                 <img src="" alt="Photography sample 1" width="280px">
 
                 <h3><p>Official shoot </p></h3>
             </div>
             <div class="card">
-                <img src="https://drive.google.com/uc?export=view&id=1C8L-zSftcbHEXoxTzCFbtDTkoM5IlHRg" alt="Outdoor shoot 1">
-        <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879220/rryr5y5y_sinqni.jpg" alt="Outdoor shoot 2">
-        <img src="https://drive.google.com/uc?export=view&id=ANOTHER_ID_2" alt="Outdoor shoot 3">
+                <img src="" alt="Photography sample 1" width="280px">
+                 <img src="" alt="Photography sample 1" width="280px">
+                 <img src="" alt="Photography sample 1" width="280px">
+                 <img src="" alt="Photography sample 1" width="280px">
+                 <img src="" alt="Photography sample 1" width="280px">
                 <h3><p>outdoor shoots</p></h3>
             </div>
             <div class="card">
                 <img src="" alt="Photography sample 4">
+                 <img src="" alt="Photography sample 1" width="280px">
+                 <img src="" alt="Photography sample 1" width="280px">
                 <p>Graduation photos capturing academic achievements.</p>
             </div>
             <div class="card">
                 <h3>Modern Wedding</h3>
-                <img src="DSC_0329.jpg" alt="Photography sample 5">
-                <img src="DSC_0593.jpg" alt="Photography sample 5">
-                <img src="DSC_0717.jpg" alt="Photography sample 5">
-                <img src="DSC_0333.jpg" alt="Photography sample 5">
-                <img src="DSC_0315.jpg" alt="Photography sample 5">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879197/DSC_0329_yxzcgc.jpg" alt="Photography sample 5">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878234/DSC_0593_zw6fms.jpg" alt="Photography sample 5">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878248/DSC_0717_ettoxv.jpg" alt="Photography sample 5">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879272/DSC_0333_o2dtzu.jpg" alt="Photography sample 5">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879289/DSC_0315_uqcykf.jpg" alt="Photography sample 5">
                 <img src="DSC_0562.jpg" alt="Photography sample 5">
                 <h3>Traditional Wedding</h3>
                 <img src="DSC_0333.jpg" alt="Photography sample 5">
