--- a/gallery.html
+++ b/gallery.html
@@ -67,8 +67,8 @@
                 <p>Wedding photography documenting your special day.</p>
             </div>
             <div class="card">
-                <img src="Birthday shoot\nnnnnnnnnnns.jpg">
-                <img src="Birthday shoot\IMG-20241225-WA0036.jpg">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746881856/nnnnnnnnnnns_ovewpe.jpg">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746881811/IMG-20241225-WA0036_arbjbv.jpg">
                 <p>Birthday celebrations frozen in time with stunning photography.</p>
             </div>
         </div>
