--- a/gallery.html
+++ b/gallery.html
@@ -28,24 +28,24 @@
         <h2>Our Work</h2>
         <div class="gallery-grid">
             <div class="card">
-                <img src="" alt="Photography sample 1" width="280px">
-                 <img src="" alt="Photography sample 1" width="280px">
-
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746883601/sdfcdvg_w5cy2c.jpg" alt="Photography sample 1" width="280px">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746883605/dfvgr_gmnmii.jpg" alt="Photography sample 1" width="280px">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746883592/fdfgh_aocepb.jpg" alt="Photography sample 1" width="280px">
                <h3><p>Family portrait session capturing the essence of togetherness.</p></h3>
             </div>
             <div class="card">
-                 <img src="" alt="Photography sample 1" width="280px">
-                 <img src="" alt="Photography sample 1" width="280px">
-                 <img src="" alt="Photography sample 1" width="280px">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878468/fgtretgtr_bq6pp4.jpg" alt="Photography sample 1" width="280px">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879213/weqrwer_pn7e1i.jpg" alt="Photography sample 1" width="280px">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878659/wsqew_zno1zp.jpg" alt="Photography sample 1" width="280px">
 
                 <h3><p>Official shoot </p></h3>
             </div>
             <div class="card">
-                <img src="" alt="Photography sample 1" width="280px">
-                 <img src="" alt="Photography sample 1" width="280px">
-                 <img src="" alt="Photography sample 1" width="280px">
-                 <img src="" alt="Photography sample 1" width="280px">
-                 <img src="" alt="Photography sample 1" width="280px">
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746882981/asedwar_iokzow.jpg" alt="Photography sample 1" width="280px">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746882986/fdsg_axinb7.jpg" alt="Photography sample 1" width="280px">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746882981/xcvcb_qpehw6.jpg" alt="Photography sample 1" width="280px">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746882979/dfvfg_znp4c5.jpg" alt="Photography sample 1" width="280px">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746882983/dsfdr_ahcq2c.jpg" alt="Photography sample 1" width="280px">
                 <h3><p>outdoor shoots</p></h3>
             </div>
             <div class="card">
