--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Ken K Arts</h1>
         <p>Capturing Moments, Creating Memories</p>
-        <img src="https://scontent.fnbo9-1.fna.fbcdn.net/v/t39.30808-6/286123184_547354276859707_3263140023539637743_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGyIzDI1lGDbwUywGSetWTdq0TdR1iNkM6rRN1HWI2QzhcP7H-DgQ1iYVXoJzTn4LihqBPUGLFPbia_pIvfr2k3&_nc_ohc=RSvbB-KISiQQ7kNvgHU-UDy&_nc_zt=23&_nc_ht=scontent.fnbo9-1.fna&_nc_gid=1Vc9eHPhZ4wsbSOk-qgKzA&oh=00_AYE2OrZX1K7kY0c9VnI6f6vem7adzjScmSmssNHgh23e6Q&oe=67E0903D" width="350px">
+        <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878498/1659338195020_k_1arts_p0sapw.png" width="350px">
     
         <h1>About K ART Studio</h1> 
 
