--- a/gallery.html
+++ b/gallery.html
@@ -62,8 +62,17 @@
                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879272/DSC_0333_o2dtzu.jpg" alt="Photography sample 5">
                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746879289/DSC_0315_uqcykf.jpg" alt="Photography sample 5">
                 <img src="DSC_0562.jpg" alt="Photography sample 5">
-                <h3>Traditional Wedding</h3>
-                <img src="DSC_0333.jpg" alt="Photography sample 5">
+                <h3>RURACIO</h3>
+                <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746907105/DSC_0120_yfhq0i.jpg" alt="Photography sample 5">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746907099/DSC_0111_kyifih.jpg" alt="Photography sample 5">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746907097/4gftg_htbr1b.jpg" alt="Photography sample 5">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746907094/DSC_0115_wzeyzh.jpg" alt="Photography sample 5">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746907084/DSC_0173_gv4xdu.jpg" alt="Photography sample 5">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746907053/DSC_0175_y1mgk4.jpg" alt="Photography sample 5">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746907048/DSC_0135-2_skgpvg.jpg" alt="Photography sample 5">
+                 <img src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746907043/DSC_0144_fwzmol.jpg" alt="Photography sample 5">
+                
+                
                 <p>Wedding photography documenting your special day.</p>
             </div>
             <div class="card">
