--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
         <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878429/fdsvgfrbv_uhcgn2.jpg" class="lazyload" width="350px" alt="Photography sample 8">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="https://res.cloudinary.com/dw1k0zoip/image/upload/v1746878234/DSC_0593_zw6fms.jpg" alt="Photography sample 9">
         <img src="https://via.placeholder.com/20x20?text=..." data-src="sdcsdcdsc.jpg" class="lazyload" width="350px" alt="Photography sample 10">
-     <div class="dots"></div>
     </div>
-    <button class="prev" onclick="prevSlide()">&#10094;</button>
-    <button class="next" onclick="nextSlide()">&#10095;</button>
+        <div class="dots"></div>
+   <button class="prev">&#10094;</button>
+    <button class="next">&#10095;</button>
+
 </div>
 <div class="container">
     <section id="about">
