--- a/index.html
+++ b/index.html
@@ -2,12 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K ART Studio - Capturing Memories</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>K Art Studio | Photography & Videography in Githongo, Meru</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" async></script>
-    
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="K Art Studio offers high-quality photography and videography services in Githongo, Meru County, Kenya. Book a session for portraits, events, weddings, and creative shoots." />
+  <meta name="keywords" content="K Art Studio, photography Githongo, videography Kenya, Meru studio, photo shoot Githongo, professional photography Kenya, wedding photography Meru, creative media studio Kenya" />
+  <meta name="author" content="KenArt Studio" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph Meta (for social media sharing) -->
+  <meta property="og:title" content="K Art Studio | Photography & Videography in Githongo" />
+  <meta property="og:description" content="Book your next photo or video session at KenArt Studio, the leading photography studio in Githongo, Meru County." />
+  <meta property="og:image" content="https://k-ken-art-studio.vercel.app/images/og-image.jpg" />
+  <meta property="og:url" content="https://k-ken-art-studio.vercel.app/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="K Art Studio | Photography & Videography" />
+  <meta name="twitter:description" content="Creative photography and video production in Githongo, Meru County. Contact KenArt Studio today!" />
+  <meta name="twitter:image" content="https://k-ken-art-studio.vercel.app/images/og-image.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://k-ken-art-studio.vercel.app/" />
+
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Structured Data (JSON-LD for local business) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "PhotographyStudio",
+      "name": "K Art Studio",
+      "image": "https://k-ken-art-studio.vercel.app/images/og-image.jpg",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Githongo",
+        "addressRegion": "Meru",
+        "addressCountry": "KE"
+      },
+      "url": "https://k-ken-art-studio.vercel.app/",
+      "telephone": "+254712345678",
+      "description": "KenArt Studio offers professional photography and video services including weddings, portraits, and creative shoots in Githongo and Meru County."
+    }
+  </script>
+</head>
 
 </head>
 <body>
